[project]
name = "pdfpop"
description = "Populate a PDF with data from Microsoft Excel"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Ian Dinwoodie", email = "dinwoodieian@gmail.com"}
]
keywords = ["pdf", "excel", "populate"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent"
]
dependencies = [
  "click>=8.1.3",
  "openpyxl>=3.0.9",
  "pandas>=1.4.2",
  "pdfrw>=0.4",
  "pytest>=7.1.2",
  "pytest-mock>=3.7.0",
  "pytest-cov>=3.0.0"
]
dynamic = [
  "version"
]

[project.urls]
repository = "https://github.com/iandinwoodie/pdfpop"

[project.scripts]
pdfpop = "pdfpop.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "pdfpop.__version__"}

[tool.black]
line-length = 80

[tool.pytest.ini_options]
addopts = "--cov=pdfpop --cov-report=term --cov-report=xml"
